alterando com checkou em título

--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: alterando com checkout em título</li>
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua alterado pela Ana</li>
