--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua alterado pela Ana</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
