--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: alterando com checkout em título</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura com Código</li>
         <li>Integração Contínua alterado pela Ana</li>
         <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
